# emu

./: .gitignore  CMakeLists.txt  README.md
Emulator/: CMakeLists.txt  main.cpp  sdl.cpp  wasm.cpp
Scripts/: emu.sh  format.sh
Tests/: CMakeLists.txt  TestCartridge.cpp
Tests/Roms/: legend_of_zelda.gb.battery.bak
